--- a/index.html
+++ b/index.html
@@ -1,17 +1,72 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>wireframe</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    
-    <!-- <script src=""></script> -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>wireframe</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+  <!-- Logo -->
+  <div>
+    <img src="images/dog.jpg" width="200" height="70">
+  </div>
+
+
+  <!-- Nav -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Image -->
+  <div><img src="images/dog.jpg" width="200" height="70"></div>
+
+
+  <!-- Sub Banners -->
+  <div>
+    <img src="images/dog.jpg" width="200" height="70">
+    <img src="images/dog.jpg" width="200" height="70">
+    <img src="images/dog.jpg" width="200" height="70">
+  </div>
+
+  <!-- Featured Section Banner -->
+
+  <div><img src="images/dog.jpg" width="200" height="70"></div>
+
+
+  <article>
+    <h2>Featured Section Heading</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio, dicta similique iusto odit natus adipisci nulla quae soluta, facere totam officia hic vitae!</p>
+
+
+  </article>
+
+
+
+<!-- Call to Action Hover thing -->
+
+
+  <div></div>
+
+
+
+
+<!-- Full Width Background -->
+
+
+  <!-- <script src=""></script> -->
+</body>
+
 </html>
