css elements added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- Logo -->
-  <div>
+  <div class="Logo">
     <img src="images/dog.jpg" width="200" height="70">
   </div>
 
@@ -31,11 +31,11 @@
   </nav>
 
   <!-- Main Image -->
-  <div><img src="images/dog.jpg" width="200" height="70"></div>
+  <div class="MainPic"><img src="images/dog.jpg" width="200" height="70"></div>
 
 
   <!-- Sub Banners -->
-  <div>
+  <div class="SubBanners">
     <img src="images/dog.jpg" width="200" height="70">
     <img src="images/dog.jpg" width="200" height="70">
     <img src="images/dog.jpg" width="200" height="70">
@@ -43,7 +43,7 @@
 
   <!-- Featured Section Banner -->
 
-  <div><img src="images/dog.jpg" width="200" height="70"></div>
+  <div class="Featured"><img src="images/dog.jpg" width="200" height="70"></div>
 
 
   <article>
@@ -58,7 +58,7 @@
 <!-- Call to Action Hover thing -->
 
 
-  <div></div>
+  <div clas="random"></div>
 
 
 
