--- a/index.html
+++ b/index.html
@@ -15,55 +15,90 @@
 <body>
 
   <!-- Logo -->
-  <div class="Logo">
-    <img src="images/dog.jpg" width="200" height="70">
-  </div>
+  <header>
+    <div>
+      <img src="images/dog.jpg" width="200" height="70" alt="Logo">
+      <nav>
+        <ul>
+          <li><a href="index.html">Contact Us</a></li>
+          <li><a href="index.html">Puppies</a></li>
+          <li><a href="index.html">About Us</a></li>
+          <li><a href="index.html">Home</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-
-  <!-- Nav -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">Home</a></li>
-    </ul>
-  </nav>
 
   <!-- Main Image -->
-  <div class="MainPic"><img src="images/dog.jpg" width="200" height="70"></div>
+  <div class="MainPic"><img src="images/main.jpg" width="960" height="450" alt="MainPic"></div>
 
 
   <!-- Sub Banners -->
   <div class="SubBanners">
-    <img src="images/dog.jpg" width="200" height="70">
-    <img src="images/dog.jpg" width="200" height="70">
-    <img src="images/dog.jpg" width="200" height="70">
+    <img src="images/puppy1.jpg" width="300" height="375" alt="Puppies">
+    <img src="images/puppy1.jpg" width="300" height="375" alt="Puppies">
+    <img src="images/puppy1.jpg" width="300" height="375" alt="Puppies">
   </div>
 
   <!-- Featured Section Banner -->
 
-  <div class="Featured"><img src="images/dog.jpg" width="200" height="70"></div>
+  <div class="Featured"><img src="images/dog2.jpg" width="480" height="400"></div>
 
 
   <article>
     <h2>Featured Section Heading</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio, dicta similique iusto odit natus adipisci nulla quae soluta, facere totam officia hic vitae!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+      dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+        dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+          dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+            dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit quod dignissimos ullam quo. Autem omnis odio,
+              dicta similique iusto <br> odit natus adipisci nulla quae soluta, facere totam officia hic vitae! lor</p>
+
 
 
   </article>
 
 
 
-<!-- Call to Action Hover thing -->
+  <!-- Call to Action Hover thing -->
 
 
-  <div clas="random"></div>
+  <div class="random">Call to Action</div>
 
 
 
 
-<!-- Full Width Background -->
+  <!-- Full Width Background -->
+  <footer>
+
+  </footer>
 
 
   <!-- <script src=""></script> -->
